# alexa_voice_control

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py  skill.json
config/: firefox.yaml  ngrok.yml
doc/: alexa_env.yml
doc/Skill Frontend/: skill.json
doc/Skill Frontend/interactionModels/custom/: en-US.json
include/Voice_Control/: alexa_voice_control.h
launch/: alexa_tts.launch  node_red.launch  node_red.launch.py  skill.launch  skill_backend.launch  skill_backend.launch.py  skill_server.launch  voice_control.launch
lib/desired_velocity_qp/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver  testsolver.c  util.c
msg/: VoiceCommand.msg  movement_msg.msg  parameter_msg.msg
script/: Exp_Manager.py  alexa_remote_control.sh  alexa_remote_control.sh.template  expManager.py  experiment.py  secrets.yaml  setup.sh
script/Skill/: backend.py  command_list.py  flows.json  frontend.json
script/TTS/: Test_NodeRED.py  example_flows.json  flows.json  node_red.py
script/utils/: command_list.py  move_robot.py  object_list.py
scripts/: experiment.py
scripts/Skill/: flows.json
scripts/utils/: move_robot.py
src/: expManager.py
src/Alexa_TTS/: alexa_tts.py  delete_cookies.py
src/Skill_Server/: flask_ngrok.py  prova.py  skill.json  skill.py  skill_davr.py  skill_server.py  skill_server_launcher.py
src/TTS/: provaNodeRED.py
src/Voice_Control/: alexa_voice_control.cpp  alexa_voice_control.py  alexa_voice_control_Node.cpp  alexa_voice_control_Node.py
srv/: String.srv
