<?xml version="1.0"?>
<package format="2">

  <name>alexa_voice_control</name>
  <version>0.0.0</version>
  <description>The alexa_voice_control package</description>

  <maintainer email="davideferr@unimore.it">Davide Ferrari</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>rospy</depend>
  
</package>
